@@ -21,8 +21,6 @@ import java.nio.ByteBuffer;
 import java.util.Random;
 import java.util.concurrent.TimeUnit;
 
-import com.google.common.base.Stopwatch;
-
 import org.apache.hadoop.fs.ChecksumException;
 import org.junit.Test;
 
@@ -147,19 +145,19 @@ public class TestDataChecksum {
     Harness h = new Harness(checksum, dataLength, true);
 
     for (int i = 0; i < NUM_RUNS; i++) {
-      Stopwatch s = new Stopwatch().start();
+      StopWatch s = new StopWatch().start();
       // calculate real checksum, make sure it passes
       checksum.calculateChunkedSums(h.dataBuf, h.checksumBuf);
       s.stop();
       System.err.println("Calculate run #" + i + ": " +
-                         s.elapsedTime(TimeUnit.MICROSECONDS) + "us");
+                         s.now(TimeUnit.MICROSECONDS) + "us");
 
-      s = new Stopwatch().start();
+      s = new StopWatch().start();
       // calculate real checksum, make sure it passes
       checksum.verifyChunkedSums(h.dataBuf, h.checksumBuf, "fake file", 0);
       s.stop();
       System.err.println("Verify run #" + i + ": " +
-                         s.elapsedTime(TimeUnit.MICROSECONDS) + "us");
+                         s.now(TimeUnit.MICROSECONDS) + "us");
     }
   }
 
