@@ -8,6 +8,9 @@ Release 2.7.1 - 2015-07-06
 
   IMPROVEMENTS
 
+    HADOOP-11032. Replace use of Guava's Stopwatch with Hadoop's StopWatch
+    (ozawa)
+
   OPTIMIZATIONS
 
   BUG FIXES
